docs: align Chinese README with English guide